# bsu-programming

./: README.md
C#/: .gitignore
C#/BaseLayeredApp/: BaseLayeredApp.sln
C#/BaseLayeredApp/Data/: DbContext.cs
C#/BaseLayeredApp/Data/DbModels/: UserDbModel.cs
C#/BaseLayeredApp/Data/User/: IUserRepository.cs  User.cs  UserRepository.cs
C#/BaseLayeredApp/Web/: Program.cs  Startup.cs  Web.csproj
C#/BaseLayeredApp/Web/Controllers/: HomeController.cs  UserController.cs
C#/BaseLayeredApp/Web/Models/: UserViewModel.cs
C#/BaseLayeredApp/Web/Properties/: launchSettings.json
C++/Firs term/: ИЗ 2 Массивы.doc  ИЗ 5 Текстовые файлы.doc  ИЗ 8 Калькулятор.doc
C++/First term/: ИЗ 4 Строки + т.файлы.doc  ИЗ 6 Простейший класс.doc  ИЗ 7 Наследование.doc
C++/OS/: Richter(russian).rar  Матрицы.doc  Пайпы.doc  Процессы.doc
C++/OS/1 - Библиотека/: Задание.doc
C++/OS/1 - Библиотека/DynamicLib/: DynamicLib.sln
C++/OS/1 - Библиотека/LoadTimeLinkingMain/: LoadTimeLinkingMain.sln
C++/OS/1 - Библиотека/Main/: Main.sln
C++/OS/1 - Библиотека/StaticLib/: StaticLib.sln
C++/OS/Task 1/: Channel.doc  buffered_channel.h
C++/asm/: Лабораторная № 1. Ассемблер.docx  Лабораторная № 2. Ассемблер (ЦА).docx  Лабораторная № 3. Арифметика целых чисел.docx  Лабораторная № 3. Ассемблер.docx  Лабораторная № 4. Сопроцессор.doc
C++/first-term/doc/: ИЗ 1 Вычисление с точностью.doc  ИЗ 2 Массивы.doc  ИЗ 4 Строки + т.файлы.doc  ИЗ 5 Текстовые файлы.doc  ИЗ 6 Простейший класс.doc  ИЗ 7 Наследование.doc  ИЗ 8 Калькулятор.doc
Git/: Git Flow.docx
Personal exercise 1 course/: ИЗ 1 Вычисление с точностью.doc  ИЗ 3 Матрицы.doc
Qt/C++/03.13.2025 painter/: main.cpp
Qt/C++/03.27.2025 moving the red ball/: base.cpp  full_with_random.cpp
Qt/C++/04.24.2025 qt json/: CMakeLists.txt  start.cpp
Qt/C++/2025/03.05.2025 standard dialogs/: CMakeLists.txt  main.cpp
Qt/C++/2026/04.09.2026 beep beep/: CMakeLists.txt  main.cpp
Qt/C++/2026/04.23.2026 sqlite/: CMakeLists.txt  initial_migration.sql  lect_2.db  main.cpp
Qt/C++/vscode-test/: CMakeLists.txt  main.cpp
Qt/Doodle Jump docs/Requirements/: Specification.txt
Qt/Gutar Hero/: spec.txt
Qt/python/json/: out.json  simple.py
Qt/python/menu_example/: complicated.py
Qt/python/painter/: simple.py
Qt/python/picture_example/: simple.py
Qt/python/yaml/: test.yaml  test_out
python/: 20204-03-19.py  class_test.py  modules.py  start.py
python/PyQt/dialogs/: simple.py
python/PyQt/json/: file_example.json
python/PyQt/menu_example/: simple.py
python/PyQt/painter/: complicated.py
python/PyQt/yaml/: simple.py
python/qt_menu/: comlicated.py  simple.py
(+38 files in other folders)
